--- a/.github/workflows/starter-no-infra_msdocs-core-sql-frg.yml
+++ b/.github/workflows/starter-no-infra_msdocs-core-sql-frg.yml
@@ -26,7 +26,12 @@ jobs:
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
-
+       
+      - name: Install dotnet ef
+        run: dotnet tool install -g dotenet-ef --version 8.*   
+  
+      - name: Create migrations bundle
+        run: dotnet ef migrations bundle --runtimelinux-x64 -o ${{env.DOTNET_ROOT}}/myapp/migrationsbundle
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
